<package format="2">
  <name>ltu_actor_graph</name>
  <version>0.0.1</version>
  <description>
    todo
  </description>
  <maintainer email="mpleune@ltu.edu">Mitchell Pleune</maintainer>
  <license>UNLICENSED</license>
  <url>https://github.com/LTU-Actor/Graph</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>

